--- a/components/menu/index.css
+++ b/components/menu/index.css
@@ -16,7 +16,7 @@ governing permissions and limitations under the License.
   --spectrum-menu-item-icon-width: var(--spectrum-workflow-icon-size-100);
   --spectrum-menu-item-label-font-size: var(--spectrum-font-size-100);
   --spectrum-menu-item-label-text-to-visual: var(--spectrum-text-to-visual-100);
-  
+
   --spectrum-menu-item-label-inline-edge-to-content: var(--spectrum-component-edge-to-text-100);
   --spectrum-menu-item-top-edge-to-text: var(--spectrum-component-top-to-text-100);
   --spectrum-menu-item-bottom-edge-to-text: var(--spectrum-component-bottom-to-text-100);
@@ -71,7 +71,7 @@ governing permissions and limitations under the License.
   --spectrum-menu-section-header-font-weight: var(--spectrum-bold-font-weight);
   --spectrum-menu-section-header-color: var(--spectrum-gray-900);
   --spectrum-menu-collapsible-icon-color: var(--spectrum-gray-900);
-  
+
   --spectrum-menu-checkmark-icon-color-default: var(--spectrum-accent-color-900);
   --spectrum-menu-checkmark-icon-color-hover: var(--spectrum-accent-color-1000);
   --spectrum-menu-checkmark-icon-color-down: var(--spectrum-accent-color-1100);
@@ -118,7 +118,7 @@ governing permissions and limitations under the License.
   --spectrum-menu-item-icon-width: var(--spectrum-workflow-icon-size-75);
   --spectrum-menu-item-label-font-size: var(--spectrum-font-size-75);
   --spectrum-menu-item-label-text-to-visual: var(--spectrum-text-to-visual-75);
- 
+
   --spectrum-menu-item-label-inline-edge-to-content: var(--spectrum-component-edge-to-text-75);
   --spectrum-menu-item-top-edge-to-text: var(--spectrum-component-top-to-text-75);
   --spectrum-menu-item-bottom-edge-to-text: var(--spectrum-component-bottom-to-text-75);
@@ -143,7 +143,7 @@ governing permissions and limitations under the License.
   --spectrum-menu-item-icon-width: var(--spectrum-workflow-icon-size-200);
   --spectrum-menu-item-label-font-size: var(--spectrum-font-size-200);
   --spectrum-menu-item-label-text-to-visual: var(--spectrum-text-to-visual-200);
-  
+
   --spectrum-menu-item-label-inline-edge-to-content: var(--spectrum-component-edge-to-text-200);
   --spectrum-menu-item-top-edge-to-text: var(--spectrum-component-top-to-text-200);
   --spectrum-menu-item-bottom-edge-to-text: var(--spectrum-component-bottom-to-text-200);
@@ -168,7 +168,7 @@ governing permissions and limitations under the License.
   --spectrum-menu-item-icon-width: var(--spectrum-workflow-icon-size-300);
   --spectrum-menu-item-label-font-size: var(--spectrum-font-size-300);
   --spectrum-menu-item-label-text-to-visual: var(--spectrum-text-to-visual-300);
-  
+
   --spectrum-menu-item-label-inline-edge-to-content: var(--spectrum-component-edge-to-text-300);
   --spectrum-menu-item-top-edge-to-text: var(--spectrum-component-top-to-text-300);
   --spectrum-menu-item-bottom-edge-to-text: var(--spectrum-component-bottom-to-text-300);
@@ -220,7 +220,7 @@ governing permissions and limitations under the License.
         --highcontrast-checkbox-highlight-color-hover: ButtonText;
         --highcontrast-checkbox-highlight-color-default: ButtonText;
       }
-  
+
       .spectrum-Menu-itemSwitch {
         --highcontrast-switch-handle-border-color-hover: ButtonText;
         --highcontrast-switch-handle-border-color-selected-default: ButtonText;
@@ -273,7 +273,7 @@ governing permissions and limitations under the License.
   .spectrum-Menu-divider {
     --spectrum-menu-divider-thickness: var(--spectrum-divider-thickness-medium);
     &.spectrum-Divider--sizeS {
-      --spectrum-menu-divider-thickness: var(--spectrum-divider-thickness-small); 
+      --spectrum-menu-divider-thickness: var(--spectrum-divider-thickness-small);
     }
 
     overflow: visible;
@@ -331,14 +331,14 @@ governing permissions and limitations under the License.
   box-sizing: border-box;
 
   background-color: var(--highcontrast-menu-item-background-color-default, var(--mod-menu-item-background-color-default, var(--spectrum-menu-item-background-color-default)));
-  
+
   line-height: var(--mod-menu-item-label-line-height, var(--spectrum-menu-item-label-line-height));
 
   min-block-size: var(--mod-menu-item-min-height, var(--spectrum-menu-item-min-height));
   padding-block-start: var(--mod-menu-item-top-edge-to-text, var(--spectrum-menu-item-top-edge-to-text));
   padding-block-end: var(--mod-menu-item-bottom-edge-to-text, var(--spectrum-menu-item-bottom-edge-to-text));
   padding-inline: var(--mod-menu-item-label-inline-edge-to-content, var(--spectrum-menu-item-label-inline-edge-to-content));
-  
+
   margin: 0;
   text-decoration: none;
 
@@ -357,7 +357,7 @@ governing permissions and limitations under the License.
 
   .spectrum-Menu-itemSwitch {
     min-block-size: 0;
-    
+
     .spectrum-Switch-switch {
       margin-block-start: var(--mod-menu-item-top-to-action, var(--spectrum-menu-item-top-to-action));;
       margin-block-end: 0;
@@ -373,7 +373,7 @@ governing permissions and limitations under the License.
     "selectedArea chevronAreaCollapsible checkmarkArea iconArea labelArea        valueArea actionsArea chevronAreaDrillIn"
     ".            .                      .             .        descriptionArea  .         .           .                 "
     ".            .                      .             .        submenuArea      .         .           .                 ";
-  
+
   grid-template-columns: auto auto auto auto 1fr auto auto auto;
   grid-template-rows: 1fr auto;
 }
@@ -414,7 +414,7 @@ governing permissions and limitations under the License.
   > .spectrum-Menu-itemValue {
     color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-value-color-focus, var(--spectrum-menu-item-value-color-focus)));
   }
-  
+
   > .spectrum-Menu-itemIcon:not(.spectrum-Menu-chevron, .spectrum-Menu-checkmark) {
     fill: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-label-icon-color-focus, var(--spectrum-menu-item-label-icon-color-focus)));
     color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-label-icon-color-focus, var(--spectrum-menu-item-label-icon-color-focus)));
@@ -460,7 +460,7 @@ governing permissions and limitations under the License.
   > .spectrum-Menu-itemValue {
     color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-value-color-hover, var(--spectrum-menu-item-value-color-hover)));
   }
-  
+
   > .spectrum-Menu-itemIcon:not(.spectrum-Menu-chevron, .spectrum-Menu-checkmark) {
     fill: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-label-icon-color-hover, var(--spectrum-menu-item-label-icon-color-hover)));
     color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-label-icon-color-hover, var(--spectrum-menu-item-label-icon-color-hover)));
@@ -483,7 +483,7 @@ governing permissions and limitations under the License.
   > .spectrum-Menu-itemLabel {
     color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-label-content-color-down, var(--spectrum-menu-item-label-content-color-down)));
   }
-  
+
   > .spectrum-Menu-sectionHeading {
     color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-section-header-color, var(--spectrum-menu-section-header-color)));
   }
@@ -495,7 +495,7 @@ governing permissions and limitations under the License.
   > .spectrum-Menu-itemValue {
     color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-value-color-down, var(--spectrum-menu-item-value-color-down)));
   }
-  
+
   > .spectrum-Menu-itemIcon:not(.spectrum-Menu-chevron, .spectrum-Menu-checkmark) {
     fill: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-label-icon-color-down, var(--spectrum-menu-item-label-icon-color-down)));
     color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-item-label-icon-color-down, var(--spectrum-menu-item-label-icon-color-down)));
@@ -631,7 +631,8 @@ governing permissions and limitations under the License.
   margin-inline-start: var(--mod-menu-item-label-to-value-area-min-spacing, var(--spectrum-menu-item-label-to-value-area-min-spacing));
 }
 
-.spectrum-Menu-itemLabel--wrapping {
+.spectrum-Menu-itemLabel--truncate {
+  display: block;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -685,11 +686,11 @@ governing permissions and limitations under the License.
 }
 
 [dir="rtl"] .spectrum-Menu-chevron {
-  transform: rotate(-180deg); 
+  transform: rotate(-180deg);
 }
 
 /*
-  assume that if an item is collapsible, it will 
+  assume that if an item is collapsible, it will
   have a chevron and we need to adjust position of submenu items to account for that
 */
 .spectrum-Menu-item--collapsible .spectrum-Menu {
@@ -736,7 +737,7 @@ governing permissions and limitations under the License.
     .spectrum-Menu-chevron {
       fill: var(--highcontrast-menu-item-color-focus, var(--mod-menu-drillin-icon-color-hover, var(--spectrum-menu-drillin-icon-color-hover)));
       color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-drillin-icon-color-hover, var(--spectrum-menu-drillin-icon-color-hover)));
-    }    
+    }
   }
 
   &:focus,
@@ -744,14 +745,14 @@ governing permissions and limitations under the License.
     .spectrum-Menu-chevron {
       fill: var(--highcontrast-menu-item-color-focus, var(--mod-menu-drillin-icon-color-focus, var(--spectrum-menu-drillin-icon-color-focus)));
       color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-drillin-icon-color-focus, var(--spectrum-menu-drillin-icon-color-focus)));
-    }    
+    }
   }
 
   &:active {
     .spectrum-Menu-chevron {
       fill: var(--highcontrast-menu-item-color-focus, var(--mod-menu-drillin-icon-color-down, var(--spectrum-menu-drillin-icon-color-down)));
       color: var(--highcontrast-menu-item-color-focus, var(--mod-menu-drillin-icon-color-down, var(--spectrum-menu-drillin-icon-color-down)));
-    }    
+    }
   }
 }
 
@@ -764,11 +765,11 @@ governing permissions and limitations under the License.
   .spectrum-Menu-sectionHeading {
     color: var(--highcontrast-menu-item-color-disabled, var(--mod-menu-item-label-content-color-disabled, var(--spectrum-menu-item-label-content-color-disabled)));
   }
-  
+
   .spectrum-Menu-itemDescription {
     color: var(--highcontrast-menu-item-color-disabled, var(--mod-menu-item-description-color-disabled, var(--spectrum-menu-item-description-color-disabled)));
   }
-  
+
   .spectrum-Menu-itemIcon {
     fill: var(--highcontrast-menu-item-color-disabled, var(--mod-menu-item-label-icon-color-disabled, var(--spectrum-menu-item-label-icon-color-disabled)));
     color: var(--highcontrast-menu-item-color-disabled, var(--mod-menu-item-label-icon-color-disabled, var(--spectrum-menu-item-label-icon-color-disabled)));
