fix(dropzone): focus outline only on keyboard focus

--- a/components/dropzone/index.css
+++ b/components/dropzone/index.css
@@ -122,8 +122,7 @@ governing permissions and limitations under the License.
     --mod-drop-zone-content-display: flex;
   }
 
-  &:focus,
-  &:focus-within {
+  &:focus-visible {
     --mod-drop-zone-border-style: solid;
     --spectrum-drop-zone-border-color: var(--highcontrast-drop-zone-border-color-hover, var(--mod-drop-zone-border-color-hover, var(--spectrum-drop-zone-border-color-hover)));
     outline: 0;
