--- a/components/stepper/themes/express.css
+++ b/components/stepper/themes/express.css
@@ -23,6 +23,7 @@ governing permissions and limitations under the License.
     --spectrum-stepper-buttons-border-color-keyboard-focus: transparent;
 
     --spectrum-stepper-button-border-radius-reset: var(--spectrum-in-field-button-fill-stacked-inner-border-rounding);
+    --spectrum-stepper-button-border-width: 0;
 
     --spectrum-stepper-border-color: var(--spectrum-gray-400);
     --spectrum-stepper-border-color-hover: var(--spectrum-gray-500);
